sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value ecart
  ecart=getNombreValeurs()
  ^AlgCombSort:6: error: not found: value ecart
    if (ecart>1){
        ^AlgCombSort:7: error: not found: value ecart
      ecart=(ecart.asInstanceOf[double]/1.3).as.InstanceOf[Int]
      ^AlgCombSort:10: error: not found: value ecart
    while (i+ecart < GetNombreValeurs()){
             ^AlgCombSort:10: error: not found: value GetNombreValeurs
    while (i+ecart < GetNombreValeurs()){
                     ^AlgCombSort:18: error: not found: value ecart
  }while(ecart>1 || inversement=true )
         ^