sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var inversement=false
  ecart=getNombreValeurs()
  do{
    if (ecart>1){
      ecart=(ecart.asInstanceOf[double]/1.3).as.InstanceOf[Int]
    }
    var i=0
    while (i+ecart < GetNombreValeurs()){
      inversement=false
      if(plusPetit(i+1,i)){
        echange(i,i+1)
        inversement=true
      }
      i=i+1
    }
  }while(ecart>1 || inversement=true )
}